# todolist_diplom

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt  tg_get_respons.json
.github/workflows/: action.yaml
bot/: admin.py  models.py  serializer.py  urls.py  views.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_options.py
bot/tg/: client.py  schemas.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_user_phone_remove_user_role.py  0003_alter_user_email.py  0004_alter_user_email.py
deploy/: docker-compose.yaml
goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goalcomment.py  0003_rename_category_goalcomment_goal.py  0004_alter_goalcomment_goal_alter_goalcomment_user.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py  0008_alter_goalcomment_options_alter_goal_title_and_more.py
tests/: conftest.py  factories.py  fixtures.py
tests/board_sharing/: test_board_sharing.py  test_category_sharing.py  test_comment_sharing_test.py  test_goal_sharing.py
tests/boards/: test_board_create.py  test_board_list_view.py  test_board_retrieve_update_destroy_view.py
tests/bot/: verify_bot_test.py
tests/categories/: test_category_create.py  test_category_list_view.py  test_category_retrieve.py
todolist_diplom/: settings.py  urls.py
(+26 files in other folders)
