[tool.poetry]
name = "todolist-diplom"
version = "0.1.0"
description = ""
authors = ["flood <teranys1986@gmail.com>"]
readme = "README.md"
packages = [{include = "todolist_diplom"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
skip-magic-trailing-coma = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | migrations
    )/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 120
combine_as_imports = true
combine_star = true
skip_glob = [
    '**/migrations/**',
    '.git',
    '.venv'
]
